--- a/k8s-manifests/hellogo-service.yaml
+++ b/k8s-manifests/hellogo-service.yaml
@@ -7,10 +7,8 @@ metadata:
 spec:
   externalTrafficPolicy: Cluster
   ports:
-  - port: 3000
-    protocol: TCP
+  - port: 8080
     targetPort: 3000
+    name: http
   selector:
     app: hellogo
-  sessionAffinity: None
-  type: NodePort
