--- a/hellogo-v1/k8s-manifests/hellogo-deployment-v1.yaml
+++ b/hellogo-v1/k8s-manifests/hellogo-deployment-v1.yaml
@@ -1,17 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
   labels:
     app: hellogo
+    version: v1
   name: hellogo-v1
+  namespace: demo
 spec:
   progressDeadlineSeconds: 600
-  replicas: 2
+  replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app: hellogo
-      version: v1
+      deployment: hellogo-v1
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -19,40 +21,17 @@ spec:
     type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       annotations:
         sidecar.istio.io/inject: "true"
       labels:
         app: hellogo
+        deployment: hellogo-v1
         version: v1
     spec:
       containers:
       - image: image-registry.openshift-image-registry.svc:5000/cicd/hellogo:latest
-        imagePullPolicy: Always
-        livenessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /
-            port: 3000
-            scheme: HTTP
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        name: hellogo
-        ports:
-        - containerPort: 3000
-          protocol: TCP
-        readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            path: /
-            port: 3000
-            scheme: HTTP
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
+        imagePullPolicy: IfNotPresent
+        name: hellogo-v1
         resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
