--- a/hellogo-v1/k8s-manifests/hellogo-service.yaml
+++ b/hellogo-v1/k8s-manifests/hellogo-service.yaml
@@ -4,11 +4,14 @@ metadata:
   labels:
     app: hellogo
   name: hellogo
+  namespace: demo
 spec:
-  externalTrafficPolicy: Cluster
+  internalTrafficPolicy: Cluster
   ports:
-  - port: 8080
+  - port: 3000
+    protocol: TCP
     targetPort: 3000
-    name: http
   selector:
     app: hellogo
+  sessionAffinity: None
+  type: ClusterIP
