--- a/servicemesh/hellogo-destinationrule.yaml
+++ b/servicemesh/hellogo-destinationrule.yaml
@@ -13,6 +13,11 @@ spec:
   - labels:
       version: v2
     name: v2
+  - labels:
+      version: v3
+    name: v3
   trafficPolicy:
     loadBalancer:
       simple: ROUND_ROBIN
+    tls:
+      mode: ISTIO_MUTUAL
