--- a/hellogo-v2/k8s-manifests/hellogo-buildconfig-v2.yaml
+++ b/hellogo-v2/k8s-manifests/hellogo-buildconfig-v2.yaml
@@ -22,7 +22,7 @@ spec:
     sourceStrategy:
       from:
         kind: ImageStreamTag
-        name: golang:1.18-ubi8
+        name: golang:latest
         namespace: openshift
     type: Source
   successfulBuildsHistoryLimit: 5
